--- a/package.json
+++ b/package.json
@@ -1,6 +1,25 @@
 {
   "name": "ngx-themes",
   "version": "0.0.1",
+  "description": "Angular 7 dynamic themes made simple with native css variables",
+  "author": "Andrei Giura",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/andreigiura/ngx-themes"
+  },
+  "bugs": {
+    "url": "https://github.com/andreigiura/ngx-themes/issues"
+  },
+  "keywords": [
+    "angular",
+    "module",
+    "theme",
+    "angular7",
+    "javascript",
+    "css",
+    "variables"
+  ],
+  "license": "MIT",
   "peerDependencies": {
     "@angular/common": "^7.2.0",
     "@angular/core": "^7.2.0"
